[gd_scene format=3 uid="uid://d4mweouaflsqk"]

[ext_resource type="Script" uid="uid://6gil3iu8bln5" path="res://Scripts/UI/inventory_item.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://cxqub0sfewm4v" path="res://addons/font_auto_size_labels/demo/Anta-Regular.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://ch47vuvvpgyqn" path="res://Assets/Sprites/dollar.png" id="2_hehin"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.12, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.25, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2509804, 0.5019608, 0.65882355, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.2, 0.4, 0.55, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.3, 0.55, 0.7, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="InventoryItem" type="Control" unique_id=774966624]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 125.0
grow_horizontal = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="." unique_id=1250615851]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel" unique_id=48897935]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="IconTexture" type="TextureRect" parent="Panel/HBoxContainer" unique_id=845643085]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
texture = ExtResource("2_hehin")
expand_mode = 1
stretch_mode = 5

[node name="InfoContainer" type="VBoxContainer" parent="Panel/HBoxContainer" unique_id=2091627152]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 2

[node name="NameContainer" type="HBoxContainer" parent="Panel/HBoxContainer/InfoContainer" unique_id=638817647]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="Panel/HBoxContainer/InfoContainer/NameContainer" unique_id=879063720]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "Item Name"
vertical_alignment = 1

[node name="CountLabel" type="Label" parent="Panel/HBoxContainer/InfoContainer/NameContainer" unique_id=2091512332]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "x1"
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="Panel/HBoxContainer/InfoContainer" unique_id=1183670885]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "Item description goes here..."
autowrap_mode = 2
clip_text = true

[node name="UseContainer" type="VBoxContainer" parent="Panel/HBoxContainer" unique_id=225163116]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.65
alignment = 1

[node name="UseButton" type="Button" parent="Panel/HBoxContainer/UseContainer" unique_id=1999441305]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 35)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "Use"
